--- a/madcoffeego/app/src/main/res/values/strings.xml
+++ b/madcoffeego/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">Mad coffee go</string>
     <string name="togo">toGo</string>
+    <string name="hello_onboarding">Coffee to Go is an application in which you can order coffee online and pick it up at the coffee shop closest to you. \nNow let\'s tell you how it works</string>
+    <string name="search_for_a_coffee_onboarding">The map shows the nearest coffee shops to you, choose the most convenient one for you. The app will tell you how long to go to it.</string>
+    <string name="making_an_order_onboarding">Choose your favorite drinks and desserts. You can change their composition and choose the time when it will be convenient for you to pick them up.</string>
+    <string name="receiving_an_order_onboarding">At the specified time, come to the coffee shop and enjoy the taste of coffee, without queuing and waiting.</string>
+    <string name="skip">Skip</string>
+    <string name="next">Next</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
