--- a/madcoffeego/app/src/main/res/values/strings.xml
+++ b/madcoffeego/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="next">Next</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sign_in">Sign in</string>
+    <string name="password_hint">+7 ( ___ ) ___ - __ - __</string>
 </resources>
