--- a/madcoffeego/app/src/main/res/values/strings.xml
+++ b/madcoffeego/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sign_in">Sign in</string>
     <string name="password_hint">+7 ( ___ ) ___ - __ - __</string>
+    <string name="coffee_shop_address">Coffee shop address</string>
+    <string name="_43_marathon_st">43, Marathon st.</string>
 </resources>
