--- a/madcoffeego/app/src/main/res/values/strings.xml
+++ b/madcoffeego/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="password_hint">+7 ( ___ ) ___ - __ - __</string>
     <string name="coffee_shop_address">Coffee shop address</string>
     <string name="_43_marathon_st">43, Marathon st.</string>
+    <string name="select">Select</string>
 </resources>
